# minicraft-CLI

./: README.md  pyproject.toml
examples/: project.yaml
src/minicraft/: __init__.py  __main__.py  errors.py  lifecycle.py  models.py  project.py
src/minicraft/plugins/: __init__.py  base.py  dump_plugin.py  python_plugin.py
