[project]
name = "minicraft"
version = "0.1.0"
description = "A miniature craft-parts lifecycle engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "pytest>=8.3.5",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "COM", "C4", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]